# tcops

./: .gitignore  Cargo.toml  Makefile  README.md  requirements.txt
data/instances/: instance_01.tcops
instances/small/: example.tcops
script/: visualizer.py
src/: lib.rs  main.rs
src/cli/: mod.rs
src/common/: constants.rs  error.rs  instance.rs  mod.rs  parser.rs  solution.rs
src/exporter/: io.rs
src/plotter/: plot.rs
src/solvers/: mod.rs
src/solvers/exact/: constraint.rs  ilp.rs  mod.rs  objective.rs  parser.rs  variable.rs
src/solvers/heuristic/: mod.rs
src/solvers/heuristic/vns/: greedy.rs  local_search.rs  mod.rs  neighborhoods.rs  shaking.rs  solver.rs  state.rs
