[package]
name = "tcops"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3"
good_lp = { version = "1.14.1", features = ["lp-solvers", "scip"], default-features = false }
scip-sys = { version = "0.1", features = ["bundled"] }